@@ -1,5 +1,6 @@
 0.32_dev
 -revise surface alpha.
+-update transform to preserve surface alpha.
 
 0.32    2022-04-17
 -add key set_repeat method.
